<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="spinner_title">لطفاً انتخاب کنيد :</string>
    <string name="app_name">فروش آفلاین</string>

    <string name="app9_my_place_">من در شرکت هستم؟</string>
    <string name="app9_local_">آدرس شرکت:</string>
    <string name="app9_web_">آدرس اينترنت:</string>

    <string name="app9_btn_save">ذخيره</string>
    <string name="app9_btn_cancel">انصراف</string>

    <string name="bpp5_desc1">
        تاريخچه شركت پخش سايه سمن
    </string>

    <string name="bpp5_desc2">
        شركت پخش سايه سمن كه نماينده انحصاري توزيع محصولات شركتهاي عاليفرد، نستله ايران، شيوا و ردبول اتريش در ايران
        است، در سال 1374 با 35 پرسنل تاسيس گرديد و به تدريج با پيشرفت شركتهاي ذكر شده بخصوص شركت عاليفرد، مجموعه سايه
        سمن نيز به رشدهاي قابل توجهي دست يافت بطوريكه در سال 1380 تعداد پرسنل شاغل در اين مجموعه به 120 نفر افزايش يافت
        و در اسفند ماه همان سال شركت اقدام به تاسيس اولين شعبه خود در استان گيلان با 21 نفر پرسنل نمود. از آن تاريخ به
        بعد و تا سال 1386 اين شركت تعداد 5 شعبه ديگر نيز افتتاح نموده است، بطوريكه در حال حاضر بيش از 18 استان بصورت
        مستقيم از طريق شعب اين شركت تحت پوشش قرار گرفته اند كه اين استانها بيش از 70% از جمعيت كل كشور را شامل ميگردد،
        ساير مناطق نيز از طريق نمايندگان انحصاري اين شركت در هر منطقه پوشش مي يابند.
    </string>

    <string name="bpp5_desc3">
        در حال حاضر شركت پخش سايه سمن با امكانات مناسب فني و حفاظتي از نظر تعداد نيروي انساني ماهر، وسائط نقليه
        استاندارد جهت پخش محصولات، انبارهاي مجهز به تجهيزات مناسب، سيستم نرم افزاري پيشرفته و ساير عوامل، حركت رو به رشد
        خود را ادامه ميدهد تا با اتكاء به اين توانمنديها بتواند در آينده اي نه چندان دور بعنوان بهترين شركت پخش در ايران
        مطرح گردد. اين شركت در سال 1384 به عضويت انجمن شركتهاي صنعت پخش ايران در آمده و در حال حاضر بعنوان عضو هيئت
        مديره اين انجمن همراه با ساير شركتهاي عضو در حال برنامه ريزي رفع مشكلات جاري و رشد صنعت پخش در ايران ميباشد.
    </string>

    <string name="bpp5_desc4">
        از رسالتهاي تعيين شده براي اين شركت توزيع و پخش مناسب محصولات ارائه شده توسط شركتهاي توليدي مي باشد، لذا اين
        شركت جهت بهينه سازي رسالتهاي خود اقدام به استقرار سيستم مديريت كيفيت و ايمني غذا از طريق اخذ گواهينامه هاي ISO
        9001، HACCP و ISO 22000 از طريق شركت DQS نموده است كه بعد از گذراندن مراحل مميزيهاي داخلي و خارجي موفق به اخذ
        گواهينامه هاي فوق گرديد و از اين بابت توانسته است بعنوان اولين شركت پخش، گواهينامه ISO 22000 در مديريت نگهداري و
        توزيع مطلوب محصولات را در ايران بدست آورد. سهامداران و مديريت ارشد سازمان اطمينان راسخ دارند كه با وجود نيروهاي
        كارآمد كه سرمايه بزرگ اين شركت مي باشند همراه با استفاده از تكنولوژي روز و رشد و ارتقاء سطح آموزش و بهره وري به
        آساني مي تواند به اهداف بلند مدت سازمان در آينده اي نه چندان دور دست يابد.
    </string>

    <string name="bpp5_desc5">
        به اميد فرداي پرتلاش
    </string>

</resources>
