<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:background="#ffdedcd8"
                  android:orientation="vertical"
                  android:gravity="center_vertical|center_horizontal">

        <ImageView
                android:id="@+id/bpp5_gallery1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baseline="1dp"/>


        <TextView
                android:id="@+id/bpp5_desc1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bpp5_desc1"
                android:gravity="center_vertical|center_horizontal|right"
                android:textSize="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:textColor="#428fe3"/>

        <TextView
                android:id="@+id/bpp5_desc2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bpp5_desc2"
                android:gravity="center_vertical|center_horizontal|right"
                android:textSize="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

        <TextView
                android:id="@+id/bpp5_desc3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bpp5_desc3"
                android:gravity="center_vertical|center_horizontal|right"
                android:textSize="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

        <TextView
                android:id="@+id/bpp5_desc4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bpp5_desc4"
                android:gravity="center_vertical|center_horizontal|right"
                android:textSize="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

        <TextView
                android:id="@+id/bpp5_desc5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bpp5_desc5"
                android:gravity="center_vertical|center_horizontal|right"
                android:textSize="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:textColor="#428fe3"/>

        <ImageView
                android:id="@+id/bpp5_gallery2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
